<?xml version="1.0" encoding="utf-8"?>
<!--The help fragment contains a stack of TextViews in a ScrollView that use string resources to
provide help information about the app to the user-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/help_content_scroll"
        android:layout_height="match_parent"
        android:layout_width="match_parent" > 
    
        <LinearLayout
            android:id="@+id/help_content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/list_course_border">

            <TextView
                android:id="@+id/header_courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_header_add_course"
                android:textColor="@color/textBlack"
                android:textSize="50dp" />
            <TextView
                android:id="@+id/instructions_courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_instructions_add_course"
                android:textColor="@color/textBlack"
                android:textSize="25dp" />
            <TextView
                android:id="@+id/header_assignments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_header_assignments"
                android:textColor="@color/textBlack"
                android:textSize="50dp" />
            <TextView
                android:id="@+id/instructions_assignments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_instructions_add_assignments"
                android:textColor="@color/textBlack"
                android:textSize="25dp" />
            <TextView
                android:id="@+id/instructions_delete_assignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_instructions_delete"
                android:textColor="@color/textBlack"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/instructions_calendar_assignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_instructions_calendar"
                android:textColor="@color/textBlack"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/instructions_submit_assignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_instructions_submit"
                android:textColor="@color/textBlack"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/header_grading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_header_grading"
                android:textColor="@color/textBlack"
                android:textSize="50dp" />
            <TextView
                android:id="@+id/instructions_grading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_instructions_grading"
                android:textColor="@color/textBlack"
                android:textSize="25dp" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>